--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,1 +1,204 @@
-hellodfsd
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Real Time Pizza App</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/CSS/style.css" />
+  </head>
+  <body>
+    <nav class="container mx-auto flex items-center justify-between py-4">
+      <div class="ml-16">
+        <img src="/Images/logo.png" alt="not loaded" />
+      </div>
+      <div class="mr-16">
+        <ul class="flex items-center">
+          <li class="ml-6"><a href="/">Menu</a></li>
+          <li class="ml-6"><a href="">Offers</a></li>
+          <li class="ml-6"><a href="">Register</a></li>
+          <li class="ml-6"><a href="">Login</a></li>
+          <li class="ml-6">
+            <a href="/" class="inline-block px-4 py-2 rounded-full">
+              <img src="/Images/cart.png" alt="not" />
+            </a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+    <section class="hero py-16">
+      <div class="container mx-auto flex items-center justify-between">
+        <div class="w-1/2 pl-16">
+          <h6 class="text-lg"><em>Are you hungry?</em></h6>
+          <h1 class="text-6xl font-bold">Don' t wait !</h1>
+          <button class="btn mt-4 px-4 py-1 font-bold text-xl rounded-full">
+            Order Now
+          </button>
+        </div>
+        <div class="w-1/2">
+          <img src="/Images/hero-pizza.png" alt="not" />
+        </div>
+      </div>
+    </section>
+
+    <section class="menu container mx-auto py-8">
+      <h1 class="text-xl font-bold mb-8 pl-16">All Pizzas</h1>
+      <div class="grid grid-cols-4 gap-x-16 gap-y-12">
+      <div class="w-64">
+        <img src="/Images/pizza.png" class="h-40 mx-auto mb-4" alt="not" />
+        <div class="text-center">
+          <h4 class="mb-4 text-lg">Margherita</h4>
+          <h6 class="size py-1 px-8 text-xs rounded-full uppercase mb-4 inline-block">
+            small
+          </h6>
+          <div class="flex items-center justify-around">
+            <span class="font-bold text-lg">₹250</span>
+            <button
+              class="add-to-cart py-1 px-6 font-bold rounded-full flex items-center "
+            >
+              <span>+</span>
+              <span>Add</span>
+            </button>
+          </div>
+        </div>
+      </div>
+      <div class="w-64">
+        <img src="/Images/pizza.png" class="h-40 mx-auto mb-4" alt="not" />
+        <div class="text-center">
+          <h4 class="mb-4 text-lg">Margherita</h4>
+          <h6 class="size py-1 px-4 text-xs rounded-full uppercase mb-4 inline-block">
+            small
+          </h6>
+          <div class="flex items-center justify-around">
+            <span class="font-bold text-lg">₹250</span>
+            <button
+              class="add-to-cart py-1 px-6 rounded-full font-bold flex items-center"
+            >
+              <span>+</span>
+              <span>Add</span>
+            </button>
+          </div>
+        </div>
+      </div>
+      <div class="w-64">
+        <img src="/Images/pizza.png" class="h-40 mx-auto mb-4" alt="not" />
+        <div class="text-center">
+          <h4 class="mb-4 text-lg">Margherita</h4>
+          <h6 class="size py-1 px-4 text-xs rounded-full uppercase mb-4 inline-block">
+            small
+          </h6>
+          <div class="flex items-center justify-around">
+            <span class="font-bold text-lg">₹250</span>
+            <button
+              class="add-to-cart py-1 px-6 rounded-full font-bold flex items-center"
+            >
+              <span>+</span>
+              <span>Add</span>
+            </button>
+          </div>
+        </div>
+      </div>
+      <div class="w-64">
+        <img src="/Images/pizza.png" class="h-40 mx-auto mb-4" alt="not" />
+        <div class="text-center">
+          <h4 class="mb-4 text-lg">Margherita</h4>
+          <h6 class="size py-1 px-4 text-xs rounded-full uppercase mb-4 inline-block">
+            small
+          </h6>
+          <div class="flex items-center justify-around">
+            <span class="font-bold text-lg">₹250</span>
+            <button
+              class="add-to-cart py-1 px-6 rounded-full font-bold flex items-center"
+            >
+              <span>+</span>
+              <span>Add</span>
+            </button>
+          </div>
+        </div>
+      </div>
+      <div class="w-64">
+        <img src="/Images/pizza.png" class="h-40 mx-auto mb-4" alt="not" />
+        <div class="text-center">
+          <h4 class="mb-4 text-lg">Margherita</h4>
+          <h6 class="size py-1 px-4 text-xs rounded-full uppercase mb-4 inline-block">
+            small
+          </h6>
+          <div class="flex items-center justify-around">
+            <span class="font-bold text-lg">₹250</span>
+            <button
+              class="add-to-cart py-1 px-6 rounded-full font-bold flex items-center"
+            >
+              <span>+</span>
+              <span>Add</span>
+            </button>
+          </div>
+        </div>
+      </div>
+      <div class="w-64">
+        <img src="/Images/pizza.png" class="h-40 mx-auto mb-4" alt="not" />
+        <div class="text-center">
+          <h4 class="mb-4 text-lg">Margherita</h4>
+          <h6 class="size py-1 px-4 text-xs rounded-full uppercase mb-4 inline-block">
+            small
+          </h6>
+          <div class="flex items-center justify-around">
+            <span class="font-bold text-lg">₹250</span>
+            <button
+              class="add-to-cart py-1 px-6 rounded-full font-bold flex items-center"
+            >
+              <span>+</span>
+              <span>Add</span>
+            </button>
+          </div>
+        </div>
+      </div>
+      <div class="w-64">
+        <img src="/Images/pizza.png" class="h-40 mx-auto mb-4" alt="not" />
+        <div class="text-center">
+          <h4 class="mb-4 text-lg">Margherita</h4>
+          <h6 class="size py-1 px-4 text-xs rounded-full uppercase mb-4 inline-block">
+            small
+          </h6>
+          <div class="flex items-center justify-around">
+            <span class="font-bold text-lg">₹250</span>
+            <button
+              class="add-to-cart py-1 px-6 rounded-full font-bold flex items-center"
+            >
+              <span>+</span>
+              <span>Add</span>
+            </button>
+          </div>
+        </div>
+      </div>
+      <div class="w-64">
+        <img src="/Images/pizza.png" class="h-40 mx-auto mb-4" alt="not" />
+        <div class="text-center">
+          <h4 class="mb-4 text-lg">Margherita</h4>
+          <h6 class="size py-1 px-4 text-xs rounded-full uppercase mb-4 inline-block">
+            small
+          </h6>
+          <div class="flex items-center justify-around">
+            <span class="font-bold text-lg">₹250</span>
+            <button
+              class="add-to-cart py-1 px-6 rounded-full font-bold flex items-center"
+            >
+              <span>+</span>
+              <span>Add</span>
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+    </section>
+  </body>
+</html>
