login and register page created

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -47,3 +47,18 @@ nav li a:hover {
 .btn:hover {
   background: #b23301;
 }
+
+.empty-cart {
+  background: #F8F8F8;
+}
+
+section .login {
+  background: #F8F8F8;
+  min-height: calc(100vh - 86px);
+}
+section .login a {
+  color: #FE5F1E;
+}
+section .login a:hover {
+  color: #b23301;
+}
