--- a/resources/scss/style.scss
+++ b/resources/scss/style.scss
@@ -47,3 +47,17 @@ nav li a{
         background: $primary-hover;
     }
 }
+.empty-cart{
+    background: $secondary;
+}
+
+section .login {
+    background: $secondary;
+    min-height: calc(100vh - 86px);
+    a {
+        color: $primary;
+        &:hover {
+            color: $primary-hover;
+        }
+    }
+}
