--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -28,7 +28,8 @@
           <li class="ml-6"><a href="/register">Register</a></li>
           <li class="ml-6"><a href="/login">Login</a></li>
           <li class="ml-6">
-            <a href="/cart" class="inline-block px-4 py-2 rounded-full">
+            <a href="/cart" class="inline-block px-4 py-2 rounded-full flex">
+            <span class="countItems font-bold text-white mr-2"><%= session.cart? session.cart.totalQty :''%></span>
               <img src="/Images/cart.png" alt="not" />
             </a>
           </li>
