--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -25,8 +25,16 @@
         <ul class="flex items-center">
           <li class="ml-6"><a href="/">Menu</a></li>
           <li class="ml-6"><a href="">Offers</a></li>
+          <% if(!user){%>
           <li class="ml-6"><a href="/register">Register</a></li>
-          <li class="ml-6"><a href="/login">Login</a></li>
+          <li class=" ml-6"><a href="/login">Login</a></li>
+          <% } else {%>
+            <li class="ml-6">
+            <form id="loggedout" action="/logout" method="POST">
+              <a onclick="document.getElementById('loggedout').submit()" href="#">Logout</a></li>
+            </form>
+          </li>
+          <%  } %>
           <li class="ml-6">
             <a href="/cart" class="inline-block px-4 py-2 rounded-full flex">
             <span class="countItems font-bold text-white mr-2"><%= session.cart? session.cart.totalQty :''%></span>
