placed order and admin order page

--- a/views/customers/cart.ejs
+++ b/views/customers/cart.ejs
@@ -29,9 +29,34 @@
     <span class="text-3xl amount">₹ <%= session.cart.totalPrice %></span>
 </div>
 
+<div>
+    <% if(!user){ %>
+        <div class="text-right">
+            <a href="/login"
+            class="inline-block cursor-pointer btn px-6 py-2 rounded-full text-white font-bold mt-6">Login
+            to continue</a>
+        </div>
+      
+       <% } else { %>
+        <div class="text-right">
+            <form action="/orders" method="POST" class="mt-12">
+                <input class="boreder border-gray-400 p-2 w-1/2 mb-4" type="text" placeholder="Phone number" name="phone">
+                <input class="border border-gray-400 p-2 w-1/2 mb-4" type="text" placeholder="Address" name="address">
+                <div>
+                    <button class="btn px-6 py-2 font-bold text-xl rounded-full text-white mt-6" type="submit">Order Now</button>
+                </div>
+            
+        </form>
+        </div>
+   
+      <% } %>
+    
+</div>
+
       </div>
     </div>
 
+      
     <% } else{ %>
             <div class="empty-cart py-16">
         <div class="container mx-auto">
