--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -19,7 +19,9 @@
   <body>
     <nav class="container mx-auto flex items-center justify-between py-4">
       <div class="ml-16">
-        <img src="/Images/logo.png" alt="not loaded" />
+        <a href="/">
+          <img src="/Images/logo.png" alt="not loaded" />
+        </a>
       </div>
       <div class="mr-16">
         <ul class="flex items-center">
