--- a/views/customers/cart.ejs
+++ b/views/customers/cart.ejs
@@ -2,7 +2,7 @@
 
     <% if(session.cart) { %>
     <div class="empty-cart py-16">
-        <div class="w-1/2 container mx-auto">
+        <div class=" container mx-auto xl:w-1/2">
             <div class="flex items-center mb-6">
                 <img src="Images/cart-black.png" alt="not">
                 <h2 class="font-bold text-2xl ml-6">Order Summary</h2>
