--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,7 +2,7 @@
       <div class="container mx-auto flex items-center justify-between">
         <div class="w-1/2 pl-16">
           <h6 class="text-lg"><em>Are you hungry?</em></h6>
-          <h1 class="text-6xl font-bold">Don' t wait !</h1>
+          <h1 class="text-3xl md:text-6xl font-bold">Don' t wait !</h1>
           <button class="btn mt-4 px-4 py-1 font-bold text-xl rounded-full">
             Order Now
           </button>
@@ -15,9 +15,9 @@
 
     <section class="menu container mx-auto py-8">
       <h1 class="text-xl font-bold mb-8 pl-16">All Pizzas</h1>
-      <div class="grid grid-cols-4 gap-x-16 gap-y-12">
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-x-16 gap-y-12">
         <% pizzas.forEach((pizza)=>{ %>
-      <div class="w-64">
+      <div class="w-full md:w-64">
         <img src="/Images/<%= pizza.image %>" class="h-40 mx-auto mb-4" alt="not" />
         <div class="text-center">
           <h4 class="mb-4 text-lg"><%= pizza.name %></h4>
