--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -14,6 +14,7 @@
       href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
     <link rel="stylesheet" href="/CSS/style.css" />
   </head>
   <body>
@@ -47,6 +48,7 @@
       </div>
     </nav>
     <%- body %>
+    <script src="/socket.io/socket.io.js"></script>
     <script src="/Js/app.js"></script>
     </body>
 </html>
