--- a/views/customers/order.ejs
+++ b/views/customers/order.ejs
@@ -34,7 +34,7 @@
            
        
         <tr>
-           <td class="border px-4 py-2"><a href="/" class="link"><%=order._id %></a></td>
+           <td class="border px-4 py-2"><a href="/customers/order/status/<%= order._id %>" class="link"><%=order._id %></a></td>
            <td class="border px-4 py-2"><%= order.phone %></td>
            <td class="border px-4 py-2"><%= order.address %></td>
            <td class="border px-4 py-2"><%= moment(order.createdAt).format('hh:mm A') %></td>
